--- a/website/public/index.html
+++ b/website/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script>(function(n,i,v,r,s,c,x,z){x=window.AwsRumClient={q:[],n:n,i:i,v:v,r:r,c:c};window[n]=function(c,p){x.q.push({c:c,p:p});};z=document.createElement('script');z.async=true;z.src=s;document.head.insertBefore(z,document.getElementsByTagName('script')[0]);})('cwr','bf661014-eb4c-4d0b-99e0-e26f12321f63','1.0.0','eu-west-1','https://client.rum.us-east-1.amazonaws.com/1.0.2/cwr.js',{sessionSampleRate:1,guestRoleArn:"arn:aws:iam::113122841518:role/CdkDeepRacerEventManagerS-CwRumAppMonitorCwRumCogn-RO1QYOFTBFGH",identityPoolId:"eu-west-1:a59a1049-b910-444d-9b67-c48bf5ca0080",endpoint:"https://dataplane.rum.eu-west-1.amazonaws.com",telemetries:['performance', 'errors', 'http'],allowCookies:true,enableXRay:true});</script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
